--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 django
 djangorestframework
-psycopg2-binary
 python-dotenv
 reportlab
-dj-database-url
 django-cors-headers
 gunicorn
 whitenoise
 dj-database-url
+psycopg2-binary>=2.9
+dj-database-url>=2.0
