--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,24 @@
-django
-djangorestframework
+Django>=5.0,<6.0
+djangorestframework>=3.15
+django-filter>=24.2
+dj-database-url>=2.1
+psycopg2-binary>=2.9
+
+# Autenticación con JWT
+djangorestframework-simplejwt>=5.3
+
+# CORS
+django-cors-headers>=4.3
+
+# Exportación de reportes
+openpyxl>=3.1  # XLSX para consumos diarios
+xhtml2pdf>=0.2.15  # generar PDFs simples
+
+# Opcional (si usas weasyprint en lugar de xhtml2pdf)
+# weasyprint>=61.0
+
 python-dotenv
 reportlab
-django-cors-headers
 gunicorn
 whitenoise
-dj-database-url
-psycopg2-binary>=2.9
 dj-database-url>=2.0
